--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
       "@mui/material": "^5.15.9",
       "mobx": "^6.12.0",
       "mobx-react-lite": "^4.0.5",
+      "notistack": "^3.0.1",
       "react": "^18.2.0",
       "react-dom": "^18.2.0",
       "zod": "^3.22.4"
